hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_add_invalid_offset.php
<?php
try {
	$dll = new SplDoublyLinkedList();
	var_dump($dll->add(12,'Offset 12 should not exist'));
} catch (OutOfRangeException $e) {
	echo "Exception: ".$e->getMessage()."\n";
}
?>